[project]
name = "hello-world-api"
version = "0.1.0"
description = ""
authors = [
    {name = "arya6678",email = "aryarupreja678@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)"
]

[tool.poetry]
name = "hello-world-api"
version = "0.1.0"
description = ""
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
